<resources>
    <string name="app_name">Game</string>
    <string name="splash">Splash Screen</string>
    <string name="game">Game Screen</string>
    <string name="menu">Menu Screen</string>
    <string name="help">Help Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="settings">Settings Screen</string>
    <string name="the_elder_scrolls">The-elder-scrolls</string>
    <string name="records">RECORDS</string>
    <string name="options">OPTIONS</string>
    <string name="exit">EXIT</string>
    <string name="play">PLAY</string>
</resources>
