<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_elder_scrolls"
        android:textColor="#303030"
        android:textSize="35sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/PLAY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:backgroundTint="#707070"
            android:text="@string/play"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/RECORDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:backgroundTint="#707070"
            android:text="@string/records"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/OPTIONS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:backgroundTint="#707070"
            android:text="@string/options"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/EXIT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:backgroundTint="#707070"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:typeface="monospace" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>